- Fixed background image - Finished bio

--- a/index.html
+++ b/index.html
@@ -86,9 +86,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">About Me</h2>
+                    <h2 class="section-heading">About EJ</h2>
                     <hr class="light">
-                    <p class="text-faded"></p>
+                    <p class="text-faded">From software auditor to virtual reality and game developer, EJ has come a long way in his career. During his undergraduate career at Lehigh University, EJ worked hard on a scholarship and performed work study as a software auditor for Lehigh's Center of Advanced Materials and Nanotechnology. After receiving his Bachelor's in Cognitive Science, he received his Master's degree in the same at the University of Delaware. He then helped develop the AAA Northampton County Website through an internship.</p>
+                    <p class="text-faded">After receiving his Master's, he began developing touch screen menus and SQL databases for bars and restaurants and soon after that, was blessed with an opportunity to do iOS development. EJ developed over 10 iPad and iPhone apps during his training which opened the doorway to Android development.</p>
+                    <p class="text-faded">EJ has worked big name companies like Ecotech Marine and Highmark Health, and now works for Comcast in Center City Philadelphia developing the company's new 360 virtual reality experience!</p>
+                    <p class="text-faded">He also now develops games in his free time for the indie game development company, Lucky Shot Media. The only thing left for him to do is develop a AAA game title, a goal he has his mind set on.</p>
                     <!--<a href="#projects" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>-->
                 </div>
             </div>
