- Added skills table

--- a/index.html
+++ b/index.html
@@ -269,81 +269,115 @@
         </div>
     </aside>
 
-    <section class="no-padding">
+    <section class="bg-dark">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">Xfinity VR</div>
-                                <div class="project-category text-faded">A virtual reality app made with Unity that brings Comcast's 360 video library to the Samsung Gear and Google Daydream</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">Boss Block Basketball</div>
-                                    <div class="project-category text-faded">A casual swipe and shoot basketball game made with Unity for Android and iOS</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">Stella First Flight</div>
-                                <div class="project-category text-faded">A casual 2D side scroller space game made with Unity for Android and iOS</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">EcoSmart Live</div>
-                                <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">AAA Northampton County Website</div>
-                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Javascript to assist AAA members in Pennsylvania's Northampton County with their roadside needs</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="portfolio-box-caption-content">
-                                    <div class="project-name">Mr. Blue Shirt Website</div>
-                                    <div class="project-category text-faded">A website designed with HTML5, CSS3, and Jquery to promote the Mr. Blue Shirt film series produced by Michael Stewart and Reckoning Force Productions</div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+            <div class="row">
+                <table class="table col-lg-3">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th>Programming Languages</th>
+                            <th>Experience in Years</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Java</td>
+                            <td>7</td>
+                        </tr>
+                        <tr>
+                            <td>SQL</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>C#</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>C++</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>Objective C</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>Swift</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>HTML</td>
+                            <td>6</td>
+                        </tr>
+                        <tr>
+                            <td>CSS</td>
+                            <td>5</td>
+                        </tr>
+                        <tr>
+                            <td>Javascript</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>JQuery</td>
+                            <td>2</td>
+                        </tr>
+                        <tr>
+                            <td>Eprime</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>JSF</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>JSP</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>Visual Basic for Applications</td>
+                            <td>1</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="table col-lg-3">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th>Mobile Development</th>
+                            <th>Experience in Years</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Android</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>iOS</td>
+                            <td>1</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="table col-lg-3">
+                    <thead class="thead-inverse">
+                        <tr>
+                            <th>Game Development</th>
+                            <th>Experience in Years</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Unity</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>Unreal Engine</td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>Lumberyard</td>
+                            <td>N/A</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </section>
