- Finished Skills Table - Made contact mail icon clickable - Updated Header description - Added website description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="An online portfolio of Eustace R Mann Jr, a skilled Game and Virtual Reality Developer. Click here to see his games and apps!">
     <meta name="author" content="Eustace R Mann Jr">
 
     <title>Eustace R Mann Jr</title>
@@ -74,7 +74,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Virtual Reality Developer and Certified Scrum Master</h1>
+                <h1 id="homeHeading">VR / Game Developer and Certified Scrum Master</h1>
                 <hr>
                 <p>Bringing multitudes of unimaginable virtual reality, video game, and mobile experiences to all platforms!</p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
@@ -260,7 +260,7 @@
         </div>
     </section>
 
-    <aside class="bg-dark" id="skills">
+    <aside class="bg-dark aside" id="skills" style="margin-bottom: -100px">
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Skills</h2>
@@ -270,114 +270,118 @@
     </aside>
 
     <section class="bg-dark">
-        <div class="container-fluid">
-            <div class="row">
-                <table class="table col-lg-3">
-                    <thead class="thead-inverse">
-                        <tr>
-                            <th>Programming Languages</th>
-                            <th>Experience in Years</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Java</td>
-                            <td>7</td>
-                        </tr>
-                        <tr>
-                            <td>SQL</td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>C#</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>C++</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>Objective C</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Swift</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>HTML</td>
-                            <td>6</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Javascript</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>JQuery</td>
-                            <td>2</td>
-                        </tr>
-                        <tr>
-                            <td>Eprime</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>JSF</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>JSP</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Visual Basic for Applications</td>
-                            <td>1</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table class="table col-lg-3">
-                    <thead class="thead-inverse">
-                        <tr>
-                            <th>Mobile Development</th>
-                            <th>Experience in Years</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Android</td>
-                            <td>4</td>
-                        </tr>
-                        <tr>
-                            <td>iOS</td>
-                            <td>1</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <table class="table col-lg-3">
-                    <thead class="thead-inverse">
-                        <tr>
-                            <th>Game Development</th>
-                            <th>Experience in Years</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Unity</td>
-                            <td>3</td>
-                        </tr>
-                        <tr>
-                            <td>Unreal Engine</td>
-                            <td>1</td>
-                        </tr>
-                        <tr>
-                            <td>Lumberyard</td>
-                            <td>N/A</td>
-                        </tr>
-                    </tbody>
-                </table>
+        <div class="container">
+            <div class="row col-lg-12">
+                <div class="col-md-6">
+                    <table class="table table-bordered table-inversed">
+                        <thead class="thead-inverse">
+                            <tr>
+                                <th>Programming Languages</th>
+                                <th>Experience in Years</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Java</td>
+                                <td>7</td>
+                            </tr>
+                            <tr>
+                                <td>SQL</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
+                                <td>C#</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>C++</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>Objective C</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Swift</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td>
+                                <td>6</td>
+                            </tr>
+                            <tr>
+                                <td>CSS</td>
+                                <td>5</td>
+                            </tr>
+                            <tr>
+                                <td>Javascript</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>JQuery</td>
+                                <td>2</td>
+                            </tr>
+                            <tr>
+                                <td>Eprime</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>JSF</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>JSP</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Visual Basic for Applications</td>
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6">
+                    <table class="table table-bordered table-inversed">
+                        <thead class="thead-inverse">
+                            <tr>
+                                <th>Mobile Development</th>
+                                <th>Experience in Years</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Android</td>
+                                <td>4</td>
+                            </tr>
+                            <tr>
+                                <td>iOS</td>
+                                <td>1</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table table-bordered table-inversed">
+                        <thead class="thead-inverse">
+                            <tr>
+                                <th>Game Development</th>
+                                <th>Experience in Years</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Unity</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>Unreal Engine</td>
+                                <td>1</td>
+                            </tr>
+                            <tr>
+                                <td>Lumberyard</td>
+                                <td>N/A</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </section>
@@ -390,10 +394,12 @@
                     <hr class="primary">
                     <p>Reach out to me if you need a developer for your next game or virtual reality project!</p>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:ejmann@udel.edu">ejmann@udel.edu</a></p>
-                </div>
+                    <div class="col-lg-12 text-center">
+                        <a href="mailto:ejmann@udel.edu">
+                            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                            <p>ejmann@udel.edu</p>
+                        </a>
+                    </div>                
             </div>
         </div>
     </section>
