- Finished Games and Apps section! - Cropped and update images for production

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 
     <section class="no-padding">
         <div class="container-fluid">
-            <div class="row no-gutter popup-gallery">
+            <div class="row no-gutter"> <!--popup-gallery-->
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="videos/xvrtrailer.mp4" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/1.png" class="img-responsive" alt="Xfinity VR">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">Xfinity VR</div>
@@ -122,8 +122,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="https://play.google.com/store/apps/details?id=com.bossblockbasketball.bossblockbasketball" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/2.png" class="img-responsive" alt="Boss Block Basketball">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
@@ -135,8 +135,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="http://www.teamups.net/teamup/3227/Stella-First-Flight" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/3.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-name">Stella First Flight</div>
@@ -146,19 +146,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-name">EcoSmart Live</div>
-                                <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
+                    <a href="https://www.northampton.aaa.com/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/4.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
@@ -170,8 +159,19 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="https://play.google.com/store/apps/details?id=com.ecotechmarine.ecosmartlive_android&hl=en" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/5.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-name">EcoSmart Live</div>
+                                <div class="project-category text-faded">An Android application that turns your cell phone into a remote control for fish tank lights and pumps</div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="http://www.mrblueshirt.com/" class="portfolio-box" target="_blank">
+                        <img src="img/portfolio/thumbnails/6.png" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="portfolio-box-caption-content">
@@ -390,7 +390,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact Me</h2>
+                    <h2 class="section-heading">Contact</h2>
                     <hr class="primary">
                     <p>Reach out to me if you need a developer for your next game or virtual reality project!</p>
                 </div>
