- Set up links for Social Media

--- a/index.html
+++ b/index.html
@@ -199,28 +199,36 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <a href="https://www.linkedin.com/in/mannej/" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Linkedin</h3>
                         <!--<p class="text-muted">Our templates are updated regularly so they don't break.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <a href="https://github.com/Eg0Jemima" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Github</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <a href="https://www.twitch.tv/eg0jemima" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Twitch</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <a href="https://twitter.com/Eg0jemima" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Twitter</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
                     </div>
@@ -230,28 +238,36 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <a href="https://connect.unity.com/u/5849fa5032b30600272b73dc" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Unity Connect</h3>
                         <!--<p class="text-muted">Our templates are updated regularly so they don't break.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
+                        <a href="https://www.hackerrank.com/Eg0jemima" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Hackerrank</h3>
                         <!--<p class="text-muted">You can use this theme as is, or you can make changes!</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
+                        <a href="http://stackoverflow.com/users/3232829/eg0jemima" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>Stack Overflow</h3>
                         <!--<p class="text-muted">We update dependencies to keep things fresh.</p>-->
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <a href="https://soundcloud.com/ej-mann" target="_blank">
+                            <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        </a>
                         <h3>SoundCloud</h3>
                         <!--<p class="text-muted">You have to make your websites with love these days!</p>-->
                     </div>
@@ -394,12 +410,12 @@
                     <hr class="primary">
                     <p>Reach out to me if you need a developer for your next game or virtual reality project!</p>
                 </div>
-                    <div class="col-lg-12 text-center">
-                        <a href="mailto:ejmann@udel.edu">
-                            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                            <p>ejmann@udel.edu</p>
-                        </a>
-                    </div>                
+                <div class="col-lg-12 text-center">
+                    <a href="mailto:ejmann@udel.edu">
+                        <i class="fa fa-envelope-o fa-3x sr-contact"></i>
+                        <p>ejmann@udel.edu</p>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
